<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:id="@+id/eancontainer"
        android:layout_height="wrap_content"

      >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minEms="@integer/ean_width"
            android:id="@+id/ean"
            android:saveEnabled="true"
            android:maxLength="@integer/ean_size"
            android:maxLines="1" android:contentDescription="@string/input_hint"
            android:hint="@string/input_hint"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button" android:contentDescription="@string/scan_button"
            android:id="@+id/scan_button"/>

    </LinearLayout>
    <TextView android:id="@+id/NoBooksMsg" android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View android:background="@color/accent"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>
    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp" android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"

            />
        <Button android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel_button"
            android:layout_weight="1"

            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:visibility="invisible"
            />

        <Button android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/ok_button"
            android:visibility="invisible"
            android:layout_weight="1"
            android:id="@+id/save_button"
            android:drawableLeft="@drawable/ic_action_accept"

            android:layout_gravity="bottom"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <FrameLayout android:layout_gravity="left"
            android:layout_width="120dp"
            android:layout_height="150dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookCover" android:scaleType="center"
                android:contentDescription="@string/book_cover"
                />

        </FrameLayout>
        <LinearLayout android:layout_gravity="right" android:layout_marginLeft="100dp"
            android:layout_width="match_parent" android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookSubTitle"
                android:layout_marginTop="10dp"

                android:maxLines="3"
                android:ellipsize="end"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authors"
                android:gravity="end"
                android:textSize="@dimen/small_fontsize"
                android:layout_marginTop="20dp"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:textSize="@dimen/small_fontsize"

             />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
